--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,70 @@
-# Core RL / ML
-torch
-gymnasium
-numpy
-pandas
-
-# Exchange API
-python-binance
-python-dotenv
-
-# Optional plotting / analysis
-matplotlib
-seaborn
-tqdm
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+attrs==25.4.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+cloudpickle==3.1.2
+contourpy==1.3.3
+cycler==0.12.1
+dateparser==1.2.2
+dotenv==0.9.9
+Farama-Notifications==0.0.4
+filelock==3.19.1
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.9.0
+gymnasium==1.2.2
+idna==3.11
+Jinja2==3.1.6
+kiwisolver==1.4.9
+MarkupSafe==2.1.5
+matplotlib==3.10.7
+mpmath==1.3.0
+multidict==6.7.0
+networkx==3.5
+numpy==2.3.5
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.6.77
+packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
+propcache==0.4.1
+pycryptodome==3.23.0
+pyparsing==3.2.5
+python-binance==1.0.32
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.11.3
+requests==2.32.5
+setuptools==80.9.0
+six==1.17.0
+sympy==1.14.0
+ta==0.11.0
+tdqm==0.0.1
+torch==2.9.1+cu126
+torchvision==0.24.1+cu126
+tqdm==4.67.1
+triton==3.5.1
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+websockets==15.0.1
+wheel==0.45.1
+yarl==1.22.0
